Comecei a escrever conteudo

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
    <main>
 <header>
-    <h1>Titulo do site</h1>
+    <h1>Gustavo Guanabara</h1>
 </header>
 <article>
-    <h2>Artigo 001</h2>
-    <p>Texto do artigo 001</p>
+    <h2>Curso d e Html</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. In ducimus saepe placeat eligendi sunt asperiores eum consectetur corporis omnis cupiditate? Quaerat fugit quae neque nostrum saepe at, animi expedita libero?</p>
 </article>
 <article>
-    <H2>Artigo 002</H2>
+    <H2>Gustavo GUanabara/H2>
     <p>Texto artigo 002</p>
 </article>
    </main> 
